macros/tests/trybuild/mod.rs
use serde_args_macros::help;

#[help]
mod foo {}

fn main() {}
